--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_barcode_scanner: ^2.0.0
   rflutter_alert: ^2.0.7
   http: ^1.1.0
+  dropdown_search: ^5.0.2
 
 dev_dependencies:
   flutter_test:
